--- a/backUp_whenErrorOccurs_sendOlderFileHere/AndroidStudio/app/build.gradle
+++ b/backUp_whenErrorOccurs_sendOlderFileHere/AndroidStudio/app/build.gradle
@@ -17,7 +17,9 @@ android {
         }
     }
 }
-
+ext {
+    parseVersion = "1.17.3"
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -25,4 +27,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation "com.parse:parse-android:$parseVersion"
+    implementation "com.parse:parse-fcm-android:$parseVersion"
+
 }
