addManager Added, Sign Up Activity Fix
Other implementations done,
admin, consumer created.
2 pages added

--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AdminActivity"></activity>
+        <activity android:name=".AddManagerActivity"></activity>
     </application>
 
 </manifest>
