Delete Manager(On Process)

--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".AdminActivity"></activity>
         <activity android:name=".AddManagerActivity"></activity>
+        <activity android:name=".DeleteManagerActivity"></activity>
     </application>
 
 </manifest>
