--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".ManageAccountActivity"></activity>
         <activity android:name=".ListMyTicketsActivity"></activity>
         <activity android:name=".ListTripsActivity"></activity>
+        <activity android:name=".SignUpSignUpActivity"></activity>
     </application>
 
 </manifest>
