--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         <activity android:name=".ListMyTicketsActivity"></activity>
         <activity android:name=".ListTripsActivity"></activity>
         <activity android:name=".SignUpSignUpActivity"></activity>
+        <activity android:name=".ManagerActivity"></activity>
+        <activity android:name=".EditBusActivity"></activity>
     </application>
 
 </manifest>
