--- a/Project_Android_Trustbus/TrustBusSe301Project/app/build.gradle
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
 
     implementation "com.parse:parse-android:$parseVersion"
     implementation "com.parse:parse-fcm-android:$parseVersion"
+    implementation 'com.android.support:recyclerview-v7:27.0.0'
 
 }
