--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
@@ -23,10 +23,12 @@
         <activity android:name=".CustomerActivity"></activity>
         <activity android:name=".ManageAccountActivity"></activity>
         <activity android:name=".ListMyTicketsActivity"></activity>
-        <activity android:name=".ListTripsActivity"></activity>
         <activity android:name=".SignUpSignUpActivity"></activity>
         <activity android:name=".ManagerActivity"></activity>
         <activity android:name=".EditBusActivity"></activity>
+        <activity android:name=".AddTripActivity"></activity>
+        <activity android:name=".DeleteTripActivity"></activity>
+        <activity android:name=".ListTripsActivity"></activity>
     </application>
 
 </manifest>
