Calender view||selection Added/ Add Trip Fixed/Date changed to String of some problems

--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".AddTripActivity"></activity>
         <activity android:name=".DeleteTripActivity"></activity>
         <activity android:name=".ListTripsActivity"></activity>
+        <activity android:name=".CalenderActivity"></activity>
     </application>
 
 </manifest>
