Delete Trip Added(Db Change deleted Added)

--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".ListTripsActivity" />
         <activity android:name=".CalenderActivity" />
         <activity android:name=".FilterTripActivity"></activity>
+        <activity android:name=".ListTripsForAdminActivity"></activity>
     </application>
 
 </manifest>
