Update Trip(Mistake Calender View resets before statements)

--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         <activity android:name=".CalenderActivity" />
         <activity android:name=".FilterTripActivity"></activity>
         <activity android:name=".ListTripsForAdminActivity"></activity>
+        <activity android:name=".CalenderActivityUpdate"></activity>
+        <activity android:name=".ListTripsForAdminForUpdateActivity"></activity>
     </application>
 
 </manifest>
