Manage Booking[Add Booking]

--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         <activity android:name=".ListTripsForAdminActivity"></activity>
         <activity android:name=".CalenderActivityUpdate"></activity>
         <activity android:name=".ListTripsForAdminForUpdateActivity"></activity>
+        <activity android:name=".ManageBookingActivity"></activity>
+        <activity android:name=".AddBookingActivity"></activity>
+
     </application>
 
 </manifest>
