--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
         <activity android:name=".ListTripsForAdminForUpdateActivity"></activity>
         <activity android:name=".ManageBookingActivity"></activity>
         <activity android:name=".AddBookingActivity"></activity>
+        <activity android:name=".DeleteBookingActivity"></activity>
 
     </application>
 
