--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
@@ -36,5 +36,6 @@
         <activity android:name=".ListTripsForAdminForUpdateActivity"></activity>
         <activity android:name=".ManageBookingActivity"></activity>
         <activity android:name=".AddBookingActivity"></activity>
+        <activity android:name=".ListTripsForCustomerActivity"></activity>
     </application>
 </manifest>
