--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
@@ -37,5 +37,6 @@
         <activity android:name=".ManageBookingActivity"></activity>
         <activity android:name=".AddBookingActivity"></activity>
         <activity android:name=".ListTripsForCustomerActivity"></activity>
+        <activity android:name=".DeleteBookingActivity"></activity>
     </application>
 </manifest>
