--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
@@ -38,5 +38,7 @@
         <activity android:name=".AddBookingActivity"></activity>
         <activity android:name=".ListTripsForCustomerActivity"></activity>
         <activity android:name=".DeleteBookingActivity"></activity>
+        <activity android:name=".PaymentActivity"></activity>
+
     </application>
 </manifest>
