Guest page restored

--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".DeleteBookingActivity" />
         <activity android:name=".PaymentActivity" />
         <activity android:name=".SeatSelectionActivity"></activity>
+        <activity android:name=".GuestMenuActivity"></activity>
     </application>
 
 </manifest>
