--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".PaymentActivity" />
         <activity android:name=".SeatSelectionActivity"></activity>
         <activity android:name=".GuestMenuActivity"></activity>
+        <activity android:name=".listTripsForGuest"></activity>
     </application>
 
 </manifest>
